further enhance styling and functionality. squash a few more bugs

--- a/HairSalon/wwwroot/css/styles.css
+++ b/HairSalon/wwwroot/css/styles.css
@@ -14,3 +14,11 @@ form {
 p {
     display: inline-block;
 }
+
+.stylist-paragraph {
+    margin-left: 6%;
+}
+
+.btn-sm {
+    float: right;
+}
